--- a/principal.html
+++ b/principal.html
@@ -4,7 +4,7 @@
 
 
   
-  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>principal</title></head><body style="background-image: url(fondo1.png);">
+  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>index</title></head><body style="background-image: url(fondo1.png);">
 <div style="text-align: center; width: 775px;"><big style="color: rgb(153, 0, 0);"><big><span style="font-weight: bold; font-style: italic;">ELIGE TU BICI IDEAL</span></big></big><br>
 <small><small><small><small><small>
 </small></small></small></small></small></div>
@@ -14,12 +14,12 @@
   <tbody>
     <tr>
       <td style="vertical-align: top;">
-      <div style="text-align: right;"><a href="2.html"><img style="border: 0px solid ; width: 128px; height: 116px;" alt="bici de montaña" title="bici de montaña" src="1.jpg"></a><br>
+      <div style="text-align: right;"><a href="2.html"><img style="border: 0px solid ; width: 128px; height: 116px;" alt="bici de montaÃ±a" title="bici de montaÃ±a" src="1.jpg"></a><br>
       </div>
       </td>
       <td style="vertical-align: top;"><small><small><span style="color: white;"><big style="color: rgb(204, 204, 204);">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <br>
-&lt;&lt;Bicis de montaña</big></span></small></small><br>
+&lt;&lt;Bicis de montaÃ±a</big></span></small></small><br>
       </td>
       <td colspan="1" rowspan="2" style="vertical-align: top; color: white;"><small><span style="color: red;">Si necesitas consejo contactanos:</span></small><br>
       <form method="post" action="mailto:bicis@noexiste.com" name="formulario"> <small><small><small><br>
@@ -37,7 +37,7 @@ Nombre completo:</small></small></small>
         <br>
         <small><small>Zonas:</small></small>&nbsp;&nbsp;&nbsp;&nbsp; <small><small><small>asfalto<input name="asfalto" value="-1" type="radio">&nbsp;&nbsp;&nbsp; &nbsp;
 &nbsp; &nbsp;&nbsp; sendas<input name="sendas" value="-1" type="radio">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-monaña<input name="montaña" value="-1" type="radio">&nbsp; </small></small></small><br>
+monaÃ±a<input name="montaÃ±a" value="-1" type="radio">&nbsp; </small></small></small><br>
         <small><small><small><big>Comentarios:</big></small></small></small>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <br>
         <textarea cols="15" rows="3" name="Comentarios"></textarea>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
